--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.17.2
+altair==5.5.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
+attrs==25.4.0
 blinker==1.9.0
 cachetools==6.2.2
 certifi==2025.11.12
@@ -32,6 +34,8 @@ importlib_metadata==8.7.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
 Mako==1.3.10
 MarkupSafe==3.0.3
@@ -39,6 +43,7 @@ matplotlib==3.10.7
 mlflow==3.6.0
 mlflow-skinny==3.6.0
 mlflow-tracing==3.6.0
+narwhals==2.12.0
 numpy==2.3.5
 opentelemetry-api==1.38.0
 opentelemetry-proto==1.38.0
@@ -48,18 +53,21 @@ packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
 protobuf==6.33.1
-pyarrow==22.0.0
+pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
 pydantic==2.12.4
 pydantic_core==2.41.5
+pydeck==0.9.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
 PyYAML==6.0.3
+referencing==0.37.0
 requests==2.32.5
+rpds-py==0.29.0
 rsa==4.9.1
 scikit-learn==1.7.2
 scipy==1.16.3
@@ -69,7 +77,11 @@ sniffio==1.3.1
 SQLAlchemy==2.0.44
 sqlparse==0.5.3
 starlette==0.50.0
+streamlit==1.51.0
+tenacity==9.1.2
 threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.5.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
